# dotfiles

./: .pre-commit-config.yaml  README.md  SETUP.md  pyproject.toml
dev/: Dockerfile  MACOS.md  README.md  auto.sh  dev.sh  docker.sh
dotfiles/tmux/: .tmux.conf  README.md
dotfiles/tmux/tmux-powerline/: config.sh
dotfiles/tmux/tmux-powerline/themes/: default.sh
dotfiles/zsh/: README.md
scripts/: bootstrap.py  collect.py  common.py  dev.py
scripts/modules/: tmux.py  zsh.py
setup/: README.md  TIPS.md  auto.sh
src/: cli.py  runner.py
src/core/: checksum.py  config.py  events.py  files.py  packages.py  paths.py  prompt.py  shell.py  state.py
src/modules/: base.py
src/modules/tmux/: config.yaml  module.py
src/modules/zsh/: config.yaml  module.py
tests/: test_bootstrap.py  test_collect.py  test_common.py  test_runner.py
tests/core/: test_checksum.py  test_files.py  test_packages.py  test_prompt.py  test_state.py
tests/modules/: test_tmux.py  test_zsh.py
tests/ui/: test_renderer.py
