[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
collect   = "scripts.collect:main"
bootstrap = "scripts.bootstrap:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
